--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-.idea/			export-ignore
-Restacker.iml	export-ignore
+.idea/			    export-ignore
+Restacker.iml	  export-ignore
 .gitattributes	export-ignore
-.gitignore		export-ignore
-# etc.
+.gitignore		  export-ignore
+README.md       export-ignore
